--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,20 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 }
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loading-content {
+  text-align: center;
+}
